fix: overflower / tooltip color

--- a/src/components/dialogs/Tooltip/tooltip.scss
+++ b/src/components/dialogs/Tooltip/tooltip.scss
@@ -10,7 +10,7 @@
 // style for tooltip box
 .__tooltip-box {
     background: var(--gray-700);
-    color: var(--ui-text-knockout);
+    color: var(--ui-white);
     padding: 4px 8px;
     z-index: var(--z-index-lv1);
     max-width: 300px;
