--- a/src/style/variables.scss
+++ b/src/style/variables.scss
@@ -322,6 +322,12 @@
     initial-value: rgba(0, 0, 0, 0.32);
 }
 
+@property --ui-base-font-size {
+    syntax: '<length>';
+    inherits: true;
+    initial-value: 12px;
+}
+
 // Dark Theme Color
 @media (prefers-color-scheme: dark) {
     :root {
